<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="2dp" >

    <!-- 过滤 -->
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp" >

        <View
            android:id="@+id/View06"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="#BFEFFF" />

        <TextView
            android:id="@+id/TextView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            android:textColor="#ff1493"
            android:textSize="18sp" />
    </FrameLayout>

    <!-- 过滤数据(16) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_data" />

            <EditText
                android:id="@+id/editText_filterdata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <!-- 起始地址(bit) -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_addr_bit" />

            <EditText
                android:id="@+id/editText_invfilsadr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:text="32" />
        </LinearLayout>

        <!-- 过滤bank -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_bank" />

            <Spinner
                android:id="@+id/spinner_invfbank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- 匹配\不匹配 -->
        <RadioGroup
            android:id="@+id/radioGroup_invmatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_match"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/match" />

            <RadioButton
                android:id="@+id/radio_non_match"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/non_match" />
        </RadioGroup>

        <!-- 启用/不启用 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioGroup
                android:id="@+id/radioGroup_enablefil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rb_not_enable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/not_enabled" />

                <RadioButton
                    android:id="@+id/rb_enable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enabled" />
            </RadioGroup>

        </LinearLayout>
    </LinearLayout>

    <!-- 获取\设置 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_getfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/get" />

        <Button
            android:id="@+id/button_setfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting" />
    </LinearLayout>

</LinearLayout>