<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- 选择读写器区域 -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <View
            android:id="@+id/view1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="#BFEFFF" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/select_reader_area"
            android:textColor="#ff1493"
            android:textColorLink="#ff1493"
            android:textSize="18sp" />
    </FrameLayout>

    <!-- 区域 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/area" />

        <Spinner
            android:id="@+id/spinner_bankw"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <!-- 起始地址 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/start_addr" />

        <EditText
            android:id="@+id/editText_startaddrw"
            android:layout_width="44dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="2" >

            <requestFocus />
        </EditText>

        <!-- 块数 -->
        <TextView
            android:id="@+id/textView_module"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/block_count" />

        <EditText
            android:id="@+id/editText_opcountw"
            android:layout_width="41dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="6" />
    </LinearLayout>

    <EditText
        android:id="@+id/editText_dataw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <!-- 写, 写epc-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_write"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/write" />

        <Button
            android:id="@+id/button_wepc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/write_epc" />
    </LinearLayout>

</LinearLayout>